bugfix: popup window scroll problem on safari

--- a/public/scss/models/effects/_popUpContent.scss
+++ b/public/scss/models/effects/_popUpContent.scss
@@ -1,5 +1,5 @@
 .popup-content--active {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .popup-content {
@@ -17,13 +17,13 @@
 	transform: translate(0%, 105%) matrix(1, 0, 0, 1, 0, 0);
 	transition: opacity .24s, transform .24s;
 	transition-delay: .3s;
-  background-color: #fff;
+	background-color: #fff;
 
-  &.popup-content--loaded {
-    iframe {
-      opacity: 1;
-    }
-  }
+	&.popup-content--loaded {
+		iframe {
+			opacity: 1;
+		}
+	}
 }
 
 .popup-content-content {
@@ -33,13 +33,13 @@
 	transition: opacity .24s;
 	transition-delay: .0s;
 
-  iframe {
-    width:100%;
-    height:100vh;
-    border:none;
-    opacity: 0;
-    transition: opacity 0.2s;
-  }
+	iframe {
+		width:100%;
+		height:100vh;
+		border:none;
+		opacity: 0;
+		transition: opacity 0.2s;
+	}
 }
 
 // .popup-content-module {
@@ -51,15 +51,15 @@
 // }
 
 .popup-content-close-wrapper {
-  display: flex;
-  justify-content: center;
-  opacity: 0;
-  position: relative;
-  position: sticky;
-  top: 0;
-  transition: opacity .24s;
-  transition-delay: .3s;
-  z-index: 2600;
+	display: flex;
+	justify-content: center;
+	opacity: 0;
+	position: relative;
+	position: sticky;
+	top: 0;
+	transition: opacity .24s;
+	transition-delay: .3s;
+	z-index: 2600;
 }
 
 .popup-content-close {
@@ -86,23 +86,23 @@
 }
 
 .popup-content--view {
-  &.popup-content {
-    opacity: 1;
-    transform: matrix(1, 0, 0, 1, 0, 0);
-    transition-delay: .0s;
-    &.popup-content__method--ajax {
-      overflow-x: hidden;
-      overflow-y: scroll;
-    }
-  }
-  .popup-content-content {
-    opacity: 1;
-    transition-delay: .3s;
-  }
-  .popup-content-close-wrapper {
-    opacity: 1;
-    transition-delay: .0s;
-  }
+	&.popup-content {
+		opacity: 1;
+		transform: matrix(1, 0, 0, 1, 0, 0);
+		transition-delay: .0s;
+		&.popup-content__method--ajax {
+			overflow-x: hidden;
+			overflow-y: scroll;
+		}
+	}
+	.popup-content-content {
+		opacity: 1;
+		transition-delay: .3s;
+	}
+	.popup-content-close-wrapper {
+		opacity: 1;
+		transition-delay: .0s;
+	}
 }
 
 .popup-content--active--pswp-open {
